fix contrast issue nav bar hover effect

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -711,8 +711,8 @@ main{
 @media screen and (min-width: 992px) {
     /*navbar*/
     #nav-bar a:hover{
-        border-bottom: 1px solid #355e03;
-        color:#355e03;
+        border-bottom: 1px solid #000;
+        
     }
 
     /*Hero Section*/
